Add api for 'deposit action' into exchange contract
